[gd_scene load_steps=12 format=2]

[ext_resource path="res://room/room.png" type="Texture" id=1]
[ext_resource path="res://player/Developer.tscn" type="PackedScene" id=2]
[ext_resource path="res://room/door.png" type="Texture" id=3]
[ext_resource path="res://furniture/Desktop.tscn" type="PackedScene" id=4]
[ext_resource path="res://elements/joblistmenu/JobListMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://jobs/JobMechanics.gd" type="Script" id=6]
[ext_resource path="res://fonts/caviar-dreams/Caviar_Dreams_Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.211765, 0.85098, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.188235, 0.505882, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[node name="World" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 352.0 ],
"_edit_vertical_guides_": [ 240.0, 640.0 ]
}

[node name="Job-mechanics" type="Control" parent="."]
script = ExtResource( 6 )
MONTHS_IN_SECONDS = 1
MONTH_DAYS = 10

[node name="Room" type="Sprite" parent="Job-mechanics"]
position = Vector2( 640, 344 )
texture = ExtResource( 1 )

[node name="Door" type="Sprite" parent="Job-mechanics"]
position = Vector2( 344, 305 )
texture = ExtResource( 3 )

[node name="Desktop" parent="Job-mechanics" instance=ExtResource( 4 )]
position = Vector2( 562, 259 )

[node name="Developer" parent="Job-mechanics" instance=ExtResource( 2 )]
position = Vector2( 593, 266 )

[node name="JobElements" type="Control" parent="Job-mechanics"]

[node name="GetJob" type="Button" parent="Job-mechanics/JobElements"]
margin_left = 534.0
margin_top = 170.0
margin_right = 569.0
margin_bottom = 190.0
text = "Job!"

[node name="ProgressBar" type="ProgressBar" parent="Job-mechanics/JobElements"]
margin_left = 240.0
margin_top = 669.0
margin_right = 1040.0
margin_bottom = 686.0
custom_styles/fg = SubResource( 1 )
percent_visible = false

[node name="DaysTimer" type="Timer" parent="Job-mechanics/JobElements"]

[node name="DaysNotification" type="Label" parent="Job-mechanics/JobElements"]
margin_left = 240.0
margin_top = 64.0
margin_right = 287.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 16, 7 )
text = "Days:  "

[node name="SelectedJob" type="Label" parent="Job-mechanics/JobElements"]
margin_left = 240.0
margin_top = 96.0
margin_right = 338.0
margin_bottom = 110.0
text = "Selected job is:"

[node name="JobTimer" type="Timer" parent="Job-mechanics/JobElements"]

[node name="CurrentMoney" type="Label" parent="Job-mechanics/JobElements"]
margin_left = 240.0
margin_top = 648.0
margin_right = 339.0
margin_bottom = 662.0
text = "Current money:"

[node name="Workingprogress" type="ProgressBar" parent="Job-mechanics/JobElements"]
margin_left = 600.0
margin_top = 184.0
margin_right = 696.0
margin_bottom = 198.0
custom_styles/fg = SubResource( 4 )

[node name="ReceivedMoney" type="AcceptDialog" parent="Job-mechanics/JobElements"]
margin_left = 576.0
margin_top = 304.0
margin_right = 662.0
margin_bottom = 362.0
window_title = "Done!"

[node name="EndMonthDialog" type="AcceptDialog" parent="Job-mechanics/JobElements"]
margin_left = 576.0
margin_top = 296.0
margin_right = 659.0
margin_bottom = 354.0

[node name="JobsMenu" type="PopupMenu" parent="Job-mechanics/JobElements"]
margin_left = 226.0
margin_top = 96.0
margin_right = 420.0
margin_bottom = 204.0
mouse_filter = 1
popup_exclusive = true

[node name="ScrollContainer2" type="ScrollContainer" parent="Job-mechanics/JobElements/JobsMenu"]
margin_left = -400.0
margin_top = -184.0
margin_right = -256.0
margin_bottom = -80.0

[node name="VBoxContainer" type="VBoxContainer" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2"]
margin_right = 134.0
margin_bottom = 254.0

[node name="OptionButton" type="OptionButton" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_right = 134.0
margin_bottom = 20.0
mouse_filter = 1
text = "Hello"

[node name="Label2" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 134.0
margin_bottom = 38.0
mouse_filter = 1
text = "hello"

[node name="Label" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 42.0
margin_right = 134.0
margin_bottom = 56.0
mouse_filter = 1
text = "hello"

[node name="Label3" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 60.0
margin_right = 134.0
margin_bottom = 74.0
mouse_filter = 1
text = "hello"

[node name="Label4" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 78.0
margin_right = 134.0
margin_bottom = 92.0
mouse_filter = 1
text = "hello"

[node name="Label5" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 96.0
margin_right = 134.0
margin_bottom = 110.0
mouse_filter = 1
text = "hello"

[node name="Label6" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 114.0
margin_right = 134.0
margin_bottom = 128.0
mouse_filter = 1
text = "asdasdawdawdsdawd"

[node name="Label7" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 132.0
margin_right = 134.0
margin_bottom = 146.0
mouse_filter = 1
text = "asdasdawdawdsdawd"

[node name="Label8" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 150.0
margin_right = 134.0
margin_bottom = 164.0
mouse_filter = 1
text = "asdasdawdawdsdawd"

[node name="Label9" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 168.0
margin_right = 134.0
margin_bottom = 182.0
mouse_filter = 1
text = "asdasdawdawdsdawd"

[node name="Label10" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 186.0
margin_right = 134.0
margin_bottom = 200.0
mouse_filter = 1
text = "asdasdawdawdsdawd"

[node name="Label11" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 204.0
margin_right = 134.0
margin_bottom = 218.0
mouse_filter = 1
text = "asdasdawdawdsdawd"

[node name="Label12" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 222.0
margin_right = 134.0
margin_bottom = 236.0
mouse_filter = 1
text = "asdasdawdawdsdawd"

[node name="Label13" type="Label" parent="Job-mechanics/JobElements/JobsMenu/ScrollContainer2/VBoxContainer"]
margin_top = 240.0
margin_right = 134.0
margin_bottom = 254.0
mouse_filter = 1
text = "asdasdawdawdsdawd"

[node name="JobListMenu" parent="Job-mechanics/JobElements" instance=ExtResource( 5 )]
margin_left = 360.0
margin_top = 120.0
margin_right = 911.0
margin_bottom = 544.0

[node name="GameOver" type="ConfirmationDialog" parent="Job-mechanics"]
margin_left = 416.0
margin_top = 280.0
margin_right = 818.0
margin_bottom = 350.0
window_title = "Game Over"
dialog_text = "You are bankrupt sorry, this is the end of your career for now...
                             Would you like to restart ?"

[node name="MainScreen" type="ColorRect" parent="Job-mechanics"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )

[node name="StartGame" type="Button" parent="Job-mechanics/MainScreen"]
margin_left = 512.0
margin_top = 320.0
margin_right = 778.0
margin_bottom = 382.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Start Game"

[connection signal="pressed" from="Job-mechanics/JobElements/GetJob" to="Job-mechanics" method="_on_GetJob_pressed"]
[connection signal="timeout" from="Job-mechanics/JobElements/DaysTimer" to="Job-mechanics" method="_on_DaysTimer_timeout"]
[connection signal="timeout" from="Job-mechanics/JobElements/JobTimer" to="Job-mechanics" method="_on_JobTimer_timeout"]
[connection signal="about_to_show" from="Job-mechanics/JobElements/ReceivedMoney" to="Job-mechanics" method="_on_ReceivedMoney_about_to_show"]
[connection signal="popup_hide" from="Job-mechanics/JobElements/ReceivedMoney" to="Job-mechanics" method="_on_ReceivedMoney_popup_hide"]
[connection signal="about_to_show" from="Job-mechanics/JobElements/EndMonthDialog" to="Job-mechanics" method="_on_EndMonthDialog_about_to_show"]
[connection signal="popup_hide" from="Job-mechanics/JobElements/EndMonthDialog" to="Job-mechanics" method="_on_EndMonthDialog_popup_hide"]
[connection signal="index_pressed" from="Job-mechanics/JobElements/JobsMenu" to="Job-mechanics" method="_on_JobsMenu_index_pressed"]
[connection signal="popup_hide" from="Job-mechanics/JobElements/JobsMenu" to="Job-mechanics" method="_on_JobsMenu_popup_hide"]
[connection signal="pressed" from="Job-mechanics/MainScreen/StartGame" to="Job-mechanics" method="_on_StartGame_pressed"]
